# glider

./: .gitmodules  CMakeLists.txt
core/: Clipboard.cpp  Clipboard.hpp  Drawable.hpp  Engine.cpp  Engine.hpp  EventHandler.hpp  Font.cpp  Font.hpp  GLState.cpp  GLState.hpp  Image.cpp  Image.hpp  Keyboard.cpp  Keyboard.hpp  Line.cpp  Line.hpp  Managed.cpp  Managed.hpp  Rectangle.hpp  ResourceManager.cpp  ResourcesManager.hpp  Scene.cpp  Scene.hpp  Scissors.cpp  Scissors.hpp  SdlFwdDecl.h  SysHeaders.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  Timer.hpp  UString.cpp  UString.hpp  Utility.hpp  VertexBuffer.cpp  VertexBuffer.hpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test.cpp
tests/fovtest/: CMakeLists.txt  cfov.hpp  test.cpp
tests/refs/: CMakeLists.txt  test.cpp
tests/ui/: CMakeLists.txt  uitest.cpp
ui/: Button.cpp  Button.hpp  Control.hpp  EditInput.cpp  EditInput.hpp  EventCallback.hpp  Label.cpp  Label.hpp  Layout.cpp  Layout.hpp  ListBox.cpp  ListBox.hpp  Picture.cpp  Picture.hpp  ScrollBar.cpp  ScrollBar.hpp  Slider.cpp  Slider.hpp  Splitter.cpp  Splitter.hpp  UIAnimation.hpp  UIConfig.cpp  UIConfig.hpp  UIContainer.cpp  UIContainer.hpp  UIObject.cpp  UIObject.hpp  UIRoot.cpp  UIRoot.hpp  Window.cpp  Window.hpp
util/: Matrix.hpp  Stream.hpp
